<resources>
    <string name="app_name">Travel_Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="prompt_email" />
    <string name="prompt_password" />
    <string name="action_sign_in_short" />
    <string name="action_sign_in" />
    <string name="Account" />
    <string name="LogIn" />
    <string name="SignIn" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login Page -->
    <string name="hint_login_email">Email:</string>
    <string name="hint_login_password">Password:</string>

    <!-- Post Page -->
    <string name="hint_postPage_category">Category:</string>
    <string name="hint_postPage_about">About:</string>

    <!-- Account Page -->
    <string name="hint_account_username">Username:</string>
    <string name="hint_account_email">Email:</string>
    <string name="hint_account_sex">Sex:</string>
    <string name="hint_account_country">Country:</string>
    <string name="hint_account_password">Password:</string>

    <!-- Edit account Page -->
    <string name="hint_account_edit_username">Username:</string>
    <string name="hint_account_edit_email">Email:</string>
    <string name="hint_account_edit_country">Country:</string>
    <string name="hint_account_edit_password">Password:</string>

    <!-- Edit Post Page -->
    <string name="hint_editPostPage_location">Location:</string>
    <string name="hint_editPostPage_category">Category:</string>
    <string name="hint_editPostPage_about">About:</string>

    <!-- New post Page -->
    <string name="hint_new_post_about">About:</string>

    <!-- Sign up Page -->
    <string name="hint_username_signUp">Username:</string>
    <string name="hint_email_signUp">Email:</string>
    <string name="hint_country_signUp">Country:</string>
    <string name="hint_password_signUp">Password:</string>


    <!-- Post Spinners -->
    <string-array name="CategoryList">
        <item>Attractions</item>
        <item>Tours</item>
        <item>Restaurants</item>
        <item>Museums</item>
    </string-array>

    <string-array name="CityList">
        <item>New York</item>
        <item>Paris</item>
        <item>Tel Aviv</item>
        <item>Los Angeles</item>
        <item>London</item>
        <item>Dubai</item>
        <item>Madrid</item>
        <item>Jerusalem</item>
        <item>Tokyo</item>
        <item>Chicago</item>
    </string-array>

    <!-- Message outputs -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>