<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.account.Account">

    <TextView
        android:id="@+id/title_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="Account"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userAvatar_account_details_imv"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="@+id/username_account_tv"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/username_account_tv"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_account_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_account_username"

        app:boxCornerRadiusBottomEnd="100dp"
        app:boxCornerRadiusBottomStart="100dp"
        app:boxCornerRadiusTopEnd="100dp"
        app:boxCornerRadiusTopStart="100dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toStartOf="@+id/userAvatar_account_details_imv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_account_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_account_str_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/username_account_tv"
            app:layout_constraintStart_toEndOf="@+id/username_account_tv" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_account_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/hint_account_email"
        app:boxCornerRadiusBottomEnd="100dp"
        app:boxCornerRadiusBottomStart="100dp"
        app:boxCornerRadiusTopEnd="100dp"
        app:boxCornerRadiusTopStart="100dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_account_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_account_str_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@+id/email_account_tv"
            app:layout_constraintStart_toEndOf="@+id/email_account_tv" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sex_account_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/hint_account_sex"
        app:boxCornerRadiusBottomEnd="100dp"
        app:boxCornerRadiusBottomStart="100dp"
        app:boxCornerRadiusTopEnd="100dp"
        app:boxCornerRadiusTopStart="100dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_account_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sex_account_str_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@+id/sex_account_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sex_account_tv" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/country_account_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/hint_account_country"
        app:boxCornerRadiusBottomEnd="100dp"
        app:boxCornerRadiusBottomStart="100dp"
        app:boxCornerRadiusTopEnd="100dp"
        app:boxCornerRadiusTopStart="100dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sex_account_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country_account_str_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@+id/country_account_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/country_account_tv" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_account_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/hint_account_password"
        app:boxCornerRadiusBottomEnd="100dp"
        app:boxCornerRadiusBottomStart="100dp"
        app:boxCornerRadiusTopEnd="100dp"
        app:boxCornerRadiusTopStart="100dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_account_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_account_str_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@+id/password_account_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/password_account_tv" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    <TextView-->
    <!--        android:id="@+id/password_account_tv"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="40dp"-->
    <!--        android:text="Password:"-->
    <!--        android:textSize="24sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/country_account_tv" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/password_account_str_tv"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:text="TextView"-->
    <!--        android:textSize="24sp"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/password_account_tv"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/password_account_tv" />-->

    <Button
        android:id="@+id/post_account_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/teal_200"
        android:text="My Post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delete_account_btn"
        app:layout_constraintTop_toBottomOf="@+id/password_account_tv" />

    <Button
        android:id="@+id/edit_accoutn_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Edit"
        app:layout_constraintEnd_toStartOf="@+id/delete_account_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_account_tv" />

    <Button
        android:id="@+id/delete_account_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="Delete"
        app:layout_constraintEnd_toStartOf="@+id/post_account_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edit_accoutn_btn"
        app:layout_constraintTop_toBottomOf="@+id/password_account_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>